--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api-common-iz",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,6 +14,7 @@
   "author": "Ismael Leiva",
   "license": "MIT",
   "homepage": "https://github.com/isma90/api-common#readme",
+  "type": "module",
   "dependencies": {
     "@types/express": "^4.17.7",
     "@types/joi": "^14.3.4",
